meow fix overflow

--- a/css/site.css
+++ b/css/site.css
@@ -90,14 +90,18 @@ hr {
 }
 
 /* my tech stuff */
-.tdiv { overflow: auto; max-width: 100%; }
+.tdiv { 
+    overflow: auto; 
+    max-width: 100%; 
+    width: fit-content; 
+    box-shadow: 0 0 8px #d06; 
+}
 table {
     min-width: 480px;
     max-width: 720px;  
     border: 4px ridge #da006d;
     background-color: #310019;
     border-collapse: collapse;
-    box-shadow: 0px 0px 8px #D06;
 }
 tbody, th, td {
     border: 2px solid #850042;
